fix margin on columns/headers to align in columns

--- a/resources/print.css
+++ b/resources/print.css
@@ -14,6 +14,9 @@ h5 {
   break-after: avoid;
   font-family: "Roboto", sans-serif;
 }
+h4 {
+  margin: 0px;
+}
 
 hr {
   break-after: avoid;
@@ -60,6 +63,10 @@ td:first-child {
   column-fill: auto;
   column-count: 2;
 }
+.section-header {
+  margin-bottom: 15px;
+  margin-top: 15px;
+}
 
 ul,
 ol {
@@ -84,4 +91,9 @@ img {
   content: "";
   display: table;
   clear: both;
+}
+
+.hr-image {
+  margin-bottom: 10px;
+  margin-top: 10px;
 }
